# ndstore

./: CMakeLists.txt  COPYRIGHT  README.md
include/: bbox.h  ndstore-client.h  ndstore-common.h  ndstore-server.h  ss_data.h  util.h
src/: CMakeLists.txt  bbox.c  ndstore-client.c  ndstore-config.cmake.in  ndstore-server.c  ndstore.pc.in  ss_data.c
tests/: CMakeLists.txt  server.c  test_get_run.c  test_put_run.c  test_reader.c  test_script.sh  test_writer.c
